@@ -253,3 +253,4 @@ class ReportWrongVersionSpecifications(BrowserView):
 
         wrongs = filter(lambda o:o.has_duplicated_code(), objs)
         return wrongs
+
